# adv_2025

./: README.md  check_all_python_files.sh  check_python_file.sh  generate_coverage_data.sh  pyproject.toml  sonar-project.properties
.github/workflows/: python_test.yml  third_party_checks.yml
solutions/: adv_2025_00.py  adv_2025_01.py  adv_2025_02.py  adv_2025_03.py  adv_2025_04.py  adv_2025_05.py  adv_2025_06.py  adv_2025_07.py  adv_2025_08.py  adv_2025_09.py  adv_2025_10.py  adv_2025_11.py  adv_2025_12.py
tests/: test_adv_2025_00.py  test_adv_2025_01.py  test_adv_2025_02.py  test_adv_2025_03.py  test_adv_2025_04.py  test_adv_2025_05.py  test_adv_2025_06.py  test_adv_2025_07.py  test_adv_2025_08.py  test_adv_2025_09.py  test_adv_2025_10.py  test_adv_2025_11.py  test_adv_2025_12.py  test_utils.py
tests/test_input_data/: data_adv_2025_00_p.txt  data_adv_2025_09_r_2.txt  data_adv_2025_10_r_0.txt
