[project]
name = "adv-2025"
version = "0.1.0"
description = "solutions of Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shapely==2.1.2",
    "types-shapely==2.1.0.20250917"
]

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "coverage==7.13.0",
    "flake8-bugbear==25.11.29",
    "flake8-pytest-style==2.2.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.0",
    "pylint==4.0.4",
    "pytest-xdist==3.8.0",
    "pytest==9.0.2",
    "ruff==0.14.8"
]
