[project]
name = "adv-2025"
version = "0.1.0"
description = "solutions of Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.2",
    "scipy==1.17.0",
    "scipy-stubs==1.17.0.2",
    "shapely==2.1.2",
    "types-shapely==2.1.0.20250917"
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "coverage==7.13.2",
    "flake8-bugbear==25.11.29",
    "flake8-pytest-style==2.2.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "pylint==4.0.4",
    "pyright[nodejs]==1.1.408",
    "pytest-xdist==3.8.0",
    "pytest==9.0.2",
    "ruff==0.14.14",
    "xenon==0.9.3"
]
