[project]
name = "adv-2025"
version = "0.1.0"
description = "solutions of Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "scipy-stubs==1.17.1.4",
    "shapely==2.1.2",
    "types-shapely==2.1.0.20260408"
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "coverage==7.13.5",
    "flake8-bugbear==25.11.29",
    "flake8-pytest-style==2.2.0",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.20.1",
    "pylint==4.0.5",
    "pyright[nodejs]==1.1.408",
    "pytest-xdist==3.8.0",
    "pytest==9.0.3",
    "ruff==0.15.9",
    "xenon==0.9.3"
]
